--- a/Backstage/citi/dao/OrderDAO.OrderState.html
+++ b/Backstage/citi/dao/OrderDAO.OrderState.html
@@ -103,7 +103,7 @@ var activeTableTab = "activeTableTab";
 <li>java.lang.Enum&lt;<a href="../../citi/dao/OrderDAO.OrderState.html" title="citi.dao中的枚举">OrderDAO.OrderState</a>&gt;</li>
 <li>
 <ul class="inheritance">
-<li>citi.dao.OrderDAO.OrderState</li>
+<li>citi.vo.Order.OrderState</li>
 </ul>
 </li>
 </ul>
