--- a/Backstage/citi/dao/OrderDAO.html
+++ b/Backstage/citi/dao/OrderDAO.html
@@ -100,7 +100,7 @@ var activeTableTab = "activeTableTab";
 <li>java.lang.Object</li>
 <li>
 <ul class="inheritance">
-<li>citi.dao.OrderDAO</li>
+<li>citi.vo.Order</li>
 </ul>
 </li>
 </ul>
