--- a/Backstage/citi/mybatismapper/CardTypeMapper.html
+++ b/Backstage/citi/mybatismapper/CardTypeMapper.html
@@ -92,7 +92,7 @@ var activeTableTab = "activeTableTab";
 <!-- ========= END OF TOP NAVBAR ========= -->
 <!-- ======== START OF CLASS DATA ======== -->
 <div class="header">
-<div class="subTitle">citi.mybatismapper</div>
+<div class="subTitle">citi.mapper</div>
 <h2 title="接口 CardTypeMapper" class="title">接口 CardTypeMapper</h2>
 </div>
 <div class="contentContainer">
