--- a/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/strategy/strategy.html
+++ b/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/strategy/strategy.html
@@ -13,17 +13,17 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <title>商户管理界面 | Starter</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../../../bower_components/bootstrap/dist/css/bootstrap.min.css">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../../../bower_components/font-awesome/css/font-awesome.min.css">
   <!-- Ionicons -->
-  <link rel="stylesheet" href="bower_components/Ionicons/css/ionicons.min.css">
+  <link rel="stylesheet" href="../../../bower_components/Ionicons/css/ionicons.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="dist/css/AdminLTE.min.css">
+  <link rel="stylesheet" href="../../../dist/css/AdminLTE.min.css">
   <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
         page. However, you can choose any other skin. Make sure you
         apply the skin class to the body tag so the changes take effect. -->
-  <link rel="stylesheet" href="dist/css/skins/skin-blue.min.css">
+  <link rel="stylesheet" href="../../../dist/css/skins/skin-blue.min.css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -64,7 +64,7 @@ desired effect
   <header class="main-header">
 
     <!-- Logo -->
-    <a href="starter.html" class="logo">
+    <a href="../starter.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>商</b></span>
       <!-- logo for regular state and mobile devices -->
@@ -86,14 +86,14 @@ desired effect
             <!-- Menu Toggle Button -->
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <!-- The user image in the navbar-->
-              <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+              <img src="../../../dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
               <span class="hidden-xs">Alexander Pierce</span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
               <li class="user-header">
-                <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                <img src="../../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
                   Alexander Pierce - Web Developer
@@ -131,7 +131,7 @@ desired effect
     </nav>
   </header>
   <!-- Left side column. contains the logo and sidebar -->
-  <aside class="main-sidebar">
+ <aside class="main-sidebar">
 
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
@@ -139,7 +139,7 @@ desired effect
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+          <img src="../../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
           <p>Alexander Pierce</p>
@@ -156,12 +156,12 @@ desired effect
               </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="showItem.html">商品清单</a></li>
-            <li><a href="addItem.html">添加商品</a></li>
+            <li><a href="../../../showItem.html">商品清单</a></li>
+            <li><a href="../../../addItem.html">添加商品</a></li>
           </ul>
         <li class="active"><a href="strategy.html"><i class="fa fa-link"></i> <span>减免策略</span></a></li>
-        <li><a href="history.html"><i class="fa fa-link"></i> <span>历史订单</span></a></li>
-    <li class="active"><a href="showData.html"><i class="fa fa-link"></i> <span>统计信息</span></a></li>
+        <li><a href="../history/history.html"><i class="fa fa-link"></i> <span>历史订单</span></a></li>
+    <li class="active"><a href="../../../showData.html"><i class="fa fa-link"></i> <span>统计信息</span></a></li>
        
       </ul>
       <!-- /.sidebar-menu -->
@@ -169,46 +169,61 @@ desired effect
     <!-- /.sidebar -->
   </aside>
 
+  <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+      <h1>
+        积分兑
+        <small>一个积分通兑平台</small>
+      </h1>
+    </section>
+
     <!-- Main content -->
     <section class="content container-fluid">
-    
-                <!-- textarea -->
-     <div class="box box-warning">
-            <div class="box-header with-border">
-              <h3 class="box-title">修改策略</h3>
+    	<div class="box">
+            <div class="box-header">
+              <h3 class="box-title">策略列表</h3>
             </div>
             <!-- /.box-header -->
-            <div class="box-body">
-              <form role="form" method="post" action="editStrategySubmit">
-                <!-- text input -->
-                <div class="form-group">
-                  <label>需满金额</label>
-                  <input type="text" class="form-control" placeholder="输入需满金额">
-                </div>
-        <div class="form-group">
-                  <label>抵扣金额</label>
-                  <input type="text" class="form-control" placeholder="输入抵扣金额">
-                </div>
-        <div class="form-group">
-                  <label>所需积分</label>
-                  <input type="text" class="form-control" placeholder="输入所需的积分">
-                </div>
-                <!-- textarea -->
-               <input type="hidden" name="strategyID" value="${strategy.strategyID}">
-                <input type="hidden" name="merchantID" value="${strategy.merchantID}">
+            <div class="box-body no-padding">
+              <table class="table table-striped">
+                <tr>
+                  <th style="width: 10px">#</th>
+                  <th>需满金额</th>
+                  <th>抵扣金额</th>
+                  <th>所需积分</th>
+                  <th style="width: 80px"></th>
+                  <th style="width: 80px"></th>
+                </tr>
+            <c:forEach items="${strategies}" var="p">
+                <tr>
+                    <td>${p.strategyID}</td>
+                    <td>${p.full}</td>
+                    <td>${p.discount}</td>
+                    <td>${p.points}</td>
 
-                <button type="submit" class="btn btn-success">提 交</button></td>
 
-              </form>
+												<!--接口一所在位置-->
 
+
+                    <td><a href="editStrategy?merchantID=${p.merchantID}&strategyID=${p.strategyID}"><span
+                         >修改</span></a></td>
+
+
+                         						<!--接口二所在位置-->
+
+
+                   <td><a href="deleteStrategy?merchantID=${p.merchantID}&strategyID=${p.strategyID}"><span
+                         >下架</span></a></td>
+
+
+                </tr>
+            </c:forEach>
+              </table>
             </div>
             <!-- /.box-body -->
-          </div>
-      <!--------------------------
-        | Your Page Content Here |
-        -------------------------->
-
+        </div>
     </section>
     <!-- /.content -->
   </div>
@@ -235,11 +250,11 @@ desired effect
 <!-- REQUIRED JS SCRIPTS -->
 
 <!-- jQuery 3 -->
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="../../../bower_components/jquery/dist/jquery.min.js"></script>
 <!-- Bootstrap 3.3.7 -->
-<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- AdminLTE App -->
-<script src="dist/js/adminlte.min.js"></script>
+<script src="../../../dist/js/adminlte.min.js"></script>
 
 <!-- Optionally, you can add Slimscroll and FastClick plugins.
      Both of these plugins are recommended to enhance the
