--- a/Backstage/citiMerchant/src/main/webapp/showItem.html
+++ b/Backstage/citiMerchant/src/main/webapp/showItem.html
@@ -65,7 +65,7 @@ desired effect
   <header class="main-header">
 
     <!-- Logo -->
-    <a href="starter.html" class="logo">
+    <a href="WEB-INF/jsp/starter.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>商</b></span>
       <!-- logo for regular state and mobile devices -->
@@ -160,8 +160,8 @@ desired effect
             <li><a href="showItem.html">商品清单</a></li>
             <li><a href="addItem.html">添加商品</a></li>
           </ul>
-        <li class="active"><a href="strategy.html"><i class="fa fa-link"></i> <span>减免策略</span></a></li>
-        <li><a href="history.html"><i class="fa fa-link"></i> <span>历史订单</span></a></li>
+        <li class="active"><a href="WEB-INF/jsp/strategy/strategy.html"><i class="fa fa-link"></i> <span>减免策略</span></a></li>
+        <li><a href="WEB-INF/jsp/history/history.html"><i class="fa fa-link"></i> <span>历史订单</span></a></li>
     <li class="active"><a href="showData.html"><i class="fa fa-link"></i> <span>统计信息</span></a></li>
        
       </ul>
