--- a/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/history/history.html
+++ b/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/history/history.html
@@ -161,7 +161,7 @@ desired effect
           </ul>
         <li class="active"><a href="../strategy/strategy.html"><i class="fa fa-link"></i> <span>减免策略</span></a></li>
         <li><a href="history.html"><i class="fa fa-link"></i> <span>历史订单</span></a></li>
-		<li class="active"><a href="../strategy/strategy.html"><i class="fa fa-link"></i> <span>统计信息</span></a></li>
+		<li class="active"><a href="../showData/showData.html"><i class="fa fa-link"></i> <span>统计信息</span></a></li>
        
       </ul>
       <!-- /.sidebar-menu -->
