--- a/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/item/showItem.html
+++ b/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/item/showItem.html
@@ -4,36 +4,29 @@ This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
 -->
 <html>
+<%@ page contentType="text/html;charset=UTF-8" language="java"
+pageEncoding="UTF-8" isELIgnored="false" %>
+<%@ taglib prefix="c" uri="http://java.sun.com/jstl/core_rt" %>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>商户管理界面 | Starter</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <script src="../../../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <link rel="stylesheet" href="../../../bower_components/bootstrap/dist/css/bootstrap.min.css">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../../../bower_components/font-awesome/css/font-awesome.min.css">
   <!-- Ionicons -->
-  <link rel="stylesheet" href="bower_components/Ionicons/css/ionicons.min.css">
+  <link rel="stylesheet" href="../../../bower_components/Ionicons/css/ionicons.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="dist/css/AdminLTE.min.css">
+  <link rel="stylesheet" href="../../../dist/css/AdminLTE.min.css">
   <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
         page. However, you can choose any other skin. Make sure you
         apply the skin class to the body tag so the changes take effect. -->
-  <link rel="stylesheet" href="dist/css/skins/skin-blue.min.css">
-<link href="bootstrap-fileinput/css/bootstrap.min.css" rel="stylesheet">
-<link href="bootstrap-fileinput/css/fileinput.css" media="all" rel="stylesheet" type="text/css"/>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" media="all" rel="stylesheet" type="text/css"/>
-<link href="bootstrap-fileinput/themes/explorer-fa/theme.css" media="all" rel="stylesheet" type="text/css"/>
-<script src="bootstrap-fileinput/js/jquery.js"></script>
-<script src="bootstrap-fileinput/js/plugins/sortable.js" type="text/javascript"></script>
-<script src="bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
-    <script src="bootstrap-fileinput/js/locales/fr.js" type="text/javascript"></script>
-    <script src="bootstrap-fileinput/js/locales/es.js" type="text/javascript"></script>
-     <script src="bootstrap-fileinput/themes/explorer-fa/theme.js" type="text/javascript"></script>
-    <script src="bootstrap-fileinput/themes/fa/theme.js" type="text/javascript"></script>
-    <script src="bootstrap-fileinput/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="bootstrap-fileinput/js/locales/zh.js"></script>
+  <link rel="stylesheet" href="../../../dist/css/skins/skin-blue.min.css">
+
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -72,7 +65,7 @@ desired effect
   <header class="main-header">
 
     <!-- Logo -->
-    <a href="WEB-INF/jsp/starter.html" class="logo">
+    <a href="../starter.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>商</b></span>
       <!-- logo for regular state and mobile devices -->
@@ -94,14 +87,14 @@ desired effect
             <!-- Menu Toggle Button -->
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <!-- The user image in the navbar-->
-              <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+              <img src="../../../dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
               <span class="hidden-xs">Alexander Pierce</span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
               <li class="user-header">
-                <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                <img src="../../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
                   Alexander Pierce - Web Developer
@@ -139,7 +132,7 @@ desired effect
     </nav>
   </header>
   <!-- Left side column. contains the logo and sidebar -->
- <aside class="main-sidebar">
+   <aside class="main-sidebar">
 
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
@@ -147,7 +140,7 @@ desired effect
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+          <img src="../../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
           <p>Alexander Pierce</p>
@@ -167,16 +160,15 @@ desired effect
             <li><a href="showItem.html">商品清单</a></li>
             <li><a href="addItem.html">添加商品</a></li>
           </ul>
-        <li class="active"><a href="WEB-INF/jsp/strategy/strategy.html"><i class="fa fa-link"></i> <span>减免策略</span></a></li>
-        <li><a href="WEB-INF/jsp/history/history.html"><i class="fa fa-link"></i> <span>历史订单</span></a></li>
-    <li class="active"><a href="showData.html"><i class="fa fa-link"></i> <span>统计信息</span></a></li>
+        <li class="active"><a href="../strategy/strategy.html"><i class="fa fa-link"></i> <span>减免策略</span></a></li>
+        <li><a href="../history/history.html"><i class="fa fa-link"></i> <span>历史订单</span></a></li>
+    <li class="active"><a href="../showData/showData.html"><i class="fa fa-link"></i> <span>统计信息</span></a></li>
        
       </ul>
       <!-- /.sidebar-menu -->
     </section>
     <!-- /.sidebar -->
   </aside>
-
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -189,38 +181,18 @@ desired effect
 
     <!-- Main content -->
     <section class="content container-fluid">
-<div class="box box-warning">
-            <div class="box-header with-border">
-              <h3 class="box-title">商品添加</h3>
-            </div>
-            <!-- /.box-header -->
-            <div class="box-body">
-              <form role="form">
-                <!-- text input -->
-                <div class="form-group">
-                  <label>商品名称</label>
-                  <input type="text" class="form-control" placeholder="输入商品名称">
-                </div>
-				<div class="form-group">
-                  <label>商品原价</label>
-                  <input type="text" class="form-control" placeholder="输入商品原价">
-                </div>
-				<div class="form-group">
-                  <label>抵扣积分</label>
-                  <input type="text" class="form-control" placeholder="输入抵扣的花旗积分">
-                </div>
-                <!-- textarea -->
-                <div class="form-group">
-                  <label>商品描述</label>
-                  <textarea class="form-control" rows="3" placeholder="输入商品描述"></textarea>
-                </div>
-                <button type="submit" class="btn btn-success">提 交</button></td>
-
-              </form>
-
-            </div>
-            <!-- /.box-body -->
-          </div>
+    <table class="table table-striped">
+        <thead>
+            <tr><th>图片</th><th>编号</th><th>名称</th><th>简述</th><th>原价</th><th>抵扣积分</th><th>操作</th></tr>
+        </thead>
+        <tbody>
+            <tr><td>
+			<a href="#" class="thumbnail"><img src="1.jpg" alt="通用的占位符缩略图" height="50" width="50"></a>
+			</td><td>001</td><td>毛巾</td><td>毛巾是一种清洁用品，特征为方形纯棉纺织品。</td><td>100￥</td><td>100</td><td><button type="button" class="btn btn-success">编辑</button><button type="button" class="btn btn-danger">删除</button></td></tr>
+            <tr><td><a href="#" class="thumbnail"><img src="2.jpg" alt="通用的占位符缩略图" height="50" width="50"></a></td><td>002</td><td>棉被</td><td>被子是床上用品的一种，是面积足以覆盖人体、长方形的布料。</td><td>100￥</td><td>100</td><td><button type="button" class="btn btn-success">编辑</button><button type="button" class="btn btn-danger">删除</button></td></tr>
+            <tr><td><a href="#" class="thumbnail"><img src="3.jpg" alt="通用的占位符缩略图" height="50" width="50"></a></td><td>003</td><td>零食</td><td>零食，通常是指一日三餐时间点之外的时间里所食用的食品。</td><td>100￥</td><td>100</td><td><button type="button" class="btn btn-success">编辑</button><button type="button" class="btn btn-danger">删除</button></td></tr>
+        </tbody>
+    </table>
       <!--------------------------
         | Your Page Content Here |
         -------------------------->
@@ -251,11 +223,11 @@ desired effect
 <!-- REQUIRED JS SCRIPTS -->
 
 <!-- jQuery 3 -->
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="../../../bower_components/jquery/dist/jquery.min.js"></script>
 <!-- Bootstrap 3.3.7 -->
-<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- AdminLTE App -->
-<script src="dist/js/adminlte.min.js"></script>
+<script src="../../../dist/js/adminlte.min.js"></script>
 
 <!-- Optionally, you can add Slimscroll and FastClick plugins.
      Both of these plugins are recommended to enhance the
