--- a/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/starter.html
+++ b/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/starter.html
@@ -152,12 +152,12 @@ desired effect
               </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="../../showItem.html">商品清单</a></li>
-            <li><a href="../../addItem.html">添加商品</a></li>
+            <li><a href="item/showItem.html">商品清单</a></li>
+            <li><a href="item/addItem.html">添加商品</a></li>
           </ul>
         <li class="active"><a href="strategy/strategy.html"><i class="fa fa-link"></i> <span>减免策略</span></a></li>
         <li><a href="history/history.html"><i class="fa fa-link"></i> <span>历史订单</span></a></li>
-		<li class="active"><a href="strategy/strategy.html"><i class="fa fa-link"></i> <span>统计信息</span></a></li>
+		<li class="active"><a href="showData/showData.html"><i class="fa fa-link"></i> <span>统计信息</span></a></li>
        
       </ul>
       <!-- /.sidebar-menu -->
