--- a/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/item/addItem.html
+++ b/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/item/addItem.html
@@ -177,8 +177,8 @@ desired effect
               </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="showItem.html">商品清单</a></li>
-            <li><a href="addItem.html">添加商品</a></li>
+            <li><a href="/item/getItem">商品清单</a></li>
+            <li><a href="/item/addItem">添加商品</a></li>
           </ul>
         <li class="active"><a href="../strategy/strategy.html"><i class="fa fa-link"></i> <span>减免策略</span></a></li>
         <li><a href="../history/history.html"><i class="fa fa-link"></i> <span>历史订单</span></a></li>
@@ -208,7 +208,7 @@ desired effect
         </div>
         <!-- /.box-header -->
         <div class="box-body">
-          <form role="form">
+          <form role="form" action="/item/addItemOperation">
             <!-- text input -->
             <div class="form-group">
               <label>商品名称</label>
