--- a/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/item/showItem.html
+++ b/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/item/showItem.html
@@ -4,7 +4,6 @@ This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
 -->
 
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 <html>
 <%@ page contentType="text/html;charset=UTF-8" language="java"
 pageEncoding="UTF-8" isELIgnored="false" %>
@@ -159,8 +158,8 @@ desired effect
               </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="showItem.html">商品清单</a></li>
-            <li><a href="addItem.html">添加商品</a></li>
+            <li><a href="/item/getItem">商品清单</a></li>
+            <li><a href="/item/addItem">添加商品</a></li>
           </ul>
         <li class="active"><a href="../strategy/strategy.html"><i class="fa fa-link"></i> <span>减免策略</span></a></li>
         <li><a href="../history/history.html"><i class="fa fa-link"></i> <span>历史订单</span></a></li>
@@ -194,7 +193,7 @@ desired effect
             <tr><td><a href="#" class="thumbnail"><img src="2.jpg" alt="通用的占位符缩略图" height="50" width="50"></a></td><td>002</td><td>棉被</td><td>被子是床上用品的一种，是面积足以覆盖人体、长方形的布料。</td><td>100￥</td><td>100</td><td><button type="button" class="btn btn-success">编辑</button><button type="button" class="btn btn-danger">删除</button></td></tr>
             <tr><td><a href="#" class="thumbnail"><img src="3.jpg" alt="通用的占位符缩略图" height="50" width="50"></a></td><td>003</td><td>零食</td><td>零食，通常是指一日三餐时间点之外的时间里所食用的食品。</td><td>100￥</td><td>100</td><td><button type="button" class="btn btn-success">编辑</button><button type="button" class="btn btn-danger">删除</button></td></tr>
 
-            <c:forEach items="${mv.items}" var="item">
+            <c:forEach items="${items}" var="item">
               <tr>
                 <td>
                   <a href="#" class="thumbnail"><img src=${item.logoURL} alt="通用的占位符缩略图" height="50" width="50"></a>
@@ -204,7 +203,7 @@ desired effect
                 <td>${item.description}</td>
                 <td>${item.originalPrice}</td>
                 <td>${item.points}</td>
-                <td><button type="button" class="btn btn-success">编辑</button><button type="button" class="btn btn-danger">删除</button></td>
+                <a href="/item/editItem"><button type="button" class="btn btn-success">编辑</button></a><a href="/item/deleteItem"><button type="button" class="btn btn-danger">删除</button></a></td>
               </tr>
             </c:forEach>
         </tbody>
