添加了商户端平台的标签库

--- a/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/strategy/editStrategy.html
+++ b/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/strategy/editStrategy.html
@@ -189,7 +189,7 @@ desired effect
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-              <form role="form" method="post" action="editStrategySubmit">
+              <form role="form" method="post" action="/editStrategySubmit">
                 <!-- text input -->
                 <div class="form-group">
                   <label>需满金额</label>
