--- a/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/item/editItem.html
+++ b/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/item/editItem.html
@@ -4,6 +4,9 @@ This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
 -->
 <html>
+<%@ page contentType="text/html;charset=UTF-8" language="java"
+pageEncoding="UTF-8" isELIgnored="false" %>
+<%@ taglib prefix="c" uri="http://java.sun.com/jstl/core_rt" %>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
