--- a/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/strategy/strategy.html
+++ b/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/strategy/strategy.html
@@ -171,6 +171,7 @@ desired effect
                 </ul>
             <li><a href=/history><i class="fa fa-link"></i> <span>历史订单</span></a></li>
             <li class="active"><a href="showData/showData.html"><i class="fa fa-link"></i> <span>统计信息</span></a></li>
+            <li class="active"><a href="showData/showData.html"><i class="fa fa-link"></i> <span>商户信息</span></a></li>
 
         </ul>
       <!-- /.sidebar-menu -->
@@ -216,14 +217,14 @@ desired effect
 												<!--接口一所在位置-->
 
 
-                    <td><a href="updateStrategy?strategyID=${p.strategyID}&MerchantID=${p.merchantID}&full=${p.full}"><span
+                    <td><a href="/strategy/addStrategyRequest"><span
                          >修改</span></a></td>
 
 
                          						<!--接口二所在位置-->
 
 
-                   <td><a href="deleteStrategy?strategyID=${p.strategyID}"><span
+                   <td><a href="/strategy/deleteStrategy?strategyID=${p.strategyID}"><span
                          >下架</span></a></td>
 
 
