--- a/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/item/addItem.html
+++ b/Backstage/citiMerchant/src/main/webapp/WEB-INF/jsp/item/addItem.html
@@ -177,8 +177,8 @@ desired effect
               </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/showItemRequest">商品清单</a></li>
-            <li><a href="item/addItem.html">添加商品</a></li>
+            <li><a href="/item/getItem">商品清单</a></li>
+            <li><a href="/item/addItem">添加商品</a></li>
           </ul>
         <li class="treeview">
           <a href="#"><i class="fa fa-link"></i> <span>减免策略</span>
@@ -221,28 +221,36 @@ desired effect
             <!-- text input -->
             <div class="form-group">
               <label>商品名称</label>
-              <input type="text" class="form-control" placeholder="输入商品名称">
+              <input name="name" type="text" class="form-control" placeholder="输入商品名称">
             </div>
             <div class="form-group">
               <label>商品原价</label>
-              <input type="text" class="form-control" placeholder="输入商品原价">
+              <input name="originalPrice" type="text" class="form-control" placeholder="输入商品原价">
             </div>
             <div class="form-group">
               <label>抵扣积分</label>
-              <input type="text" class="form-control" placeholder="输入抵扣的花旗积分">
+              <input name="points" type="text" class="form-control" placeholder="输入抵扣的花旗积分">
+            </div>
+            <div class="form-group">
+              <label>库存数量</label>
+              <input name="atock" type="text" class="form-control" placeholder="可兑换总数，若没有限制可不填">
+            </div>
+            <div class="form-group">
+              <label>抵扣券有效时间</label>
+              <input name="overdueTime" type="text" class="form-control" placeholder="抵扣券有效时间">
             </div>
             <!-- textarea -->
             <div class="form-group">
               <label>商品描述</label>
-              <textarea class="form-control" rows="3" placeholder="输入商品描述"></textarea>
+              <textarea name="description" class="form-control" rows="3" placeholder="输入商品描述"></textarea>
             </div>
             <div class="form-group">
               <label>商品图片</label>
-              <input type="file" name="myfile" data-ref="url2"
+              <input  type="file" name="logoURL" data-ref="url2"
                      class="col-sm-10 myfile" value="" /> <input type="hidden"
                                                                  name="url2" value="">
             </div>
-            <button type="submit" class="btn btn-success">提 交</button></td>
+            <button type="submit" class="btn btn-success">提 交</button>
 
           </form>
 
@@ -285,9 +293,9 @@ desired effect
      user experience. -->
 </body>
 <script type="text/javascript">
-    $(".myfile").fileinput({
+    $(".logoURL").fileinput({
         //上传的地址
-        uploadUrl:"<%=basePath%>food/uploadFile",
+        uploadUrl:"item/uploadFile",
         uploadAsync : false, //默认异步上传
         showUpload : false, //是否显示上传按钮,跟随文本框的那个
         showRemove : false, //显示移除按钮,跟随文本框的那个
@@ -311,12 +319,12 @@ desired effect
         language : 'zh'
     })
     //异步上传返回结果处理
-    $('.myfile').on('fileerror', function(event, data, msg) {
+    $('.logoURL').on('fileerror', function(event, data, msg) {
         console.log("fileerror");
         console.log(data);
     });
     //异步上传返回结果处理
-    $(".myfile").on("fileuploaded", function(event, data, previewId, index) {
+    $(".logoURL").on("fileuploaded", function(event, data, previewId, index) {
         console.log("fileuploaded");
         var ref = $(this).attr("data-ref");
         $("input[name='" + ref + "']").val(data.response.url);
@@ -324,20 +332,20 @@ desired effect
     });
 
     //同步上传错误处理
-    $('.myfile').on('filebatchuploaderror', function(event, data, msg) {
+    $('.logoURL').on('filebatchuploaderror', function(event, data, msg) {
         console.log("filebatchuploaderror");
         console.log(data);
     });
 
     //同步上传返回结果处理
-    $(".myfile").on("filebatchuploadsuccess",
+    $(".logoURL").on("filebatchuploadsuccess",
         function(event, data, previewId, index) {
             console.log("filebatchuploadsuccess");
             console.log(data);
         });
 
     //上传前
-    $('.myfile').on('filepreupload', function(event, data, previewId, index) {
+    $('.logoURL').on('filepreupload', function(event, data, previewId, index) {
         console.log("filepreupload");
     });
 </script>
